--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,30 @@
 .results-block{
   display: inline-block;
 }
+
+.no-padding{
+  padding: 0 !important;
+}
+
+.left-padding{
+  padding: 15px !important;
+}
+
+.logout{
+  padding: 0;
+}
+
+.user-name{
+  padding-top: 15px;
+}
+
+.nav.navbar-right li{
+  .btn{
+    color: fff !important;
+    margin-top: 5px;
+  }
+  
+  .btn-danger:hover{
+    background :darken(#d9534f , 20%) !important;
+  }
+}
